--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,15 +1,14 @@
 version: '3.8'
 
 services:
-  # Servidor Web (Nginx)
+  # Servidor Web (Apache)
   web:
-    image: nginx:latest
-    container_name: nginx-barbearia
+    image: php:8.0-apache
+    container_name: apache-barbearia
     ports:
       - "3300:80"  # Mapeando a porta 3300 do host para a porta 80 do container
     volumes:
-      - ./app/public:/usr/share/nginx/html:ro
-      - ./docker/nginx/default.conf:/etc/nginx/conf.d/default.conf
+      - ./app/public:/var/www/html:ro
     depends_on:
       - php
     networks:
